# Salda

./: .gitignore  CMakeLists.txt  build.sh  main.sl  main.sl.c
include/: arg.h  eval.h  lexer.h  parser.h  token.h
include/token/: token.h
src/: arg.c  main.c
src/eval/: eval.c
src/lexer/: lexer.c
src/parser/: parser.c
src/token/: token.c
test/: test.c
tools/SaldaString/: CMakeLists.txt
tools/SaldaString/include/: SaldaString.h
tools/SaldaString/src/: SaldaString.c
tools/argparse/: CMakeLists.txt
tools/argparse/include/: argparse.h
tools/argparse/src/: argparse.c
tools/list/: CMakeLists.txt
tools/list/include/: list.h
tools/list/src/: list.c
